# gomoku_42

./: .gitignore  .travis.yml  Cargo.toml  README.md  bench_result  build.rs  example.c  input  screenshot.apng  search-index.js
.rust/lib/x86_64-apple-darwin/: libSDL2.dylib  libfreetype.6.dylib  libfreetype.dylib
gomoku/: fn.main.html  index.html  sidebar-items.js
gomoku/board/: enum.Tile.html  index.html  sidebar-items.js  struct.GoBoard.html  struct.Team.html
gomoku/board/fn_str/: fn.atoi.html  index.html  sidebar-items.js
gomoku/board/go_board/: constant.GO_WIDTH.html  constant.TILES_TO_WIN.html  index.html  sidebar-items.js  struct.GoBoard.html
gomoku/board/parse/: index.html
gomoku/board/team/: index.html  sidebar-items.js  struct.Team.html
gomoku/board/tile/: enum.Tile.html  index.html  sidebar-items.js
gomoku/cmd_option/: constant.DEFAULT_FRIEND.html  constant.DEFAULT_INFO.html  constant.DEFAULT_LAYERS.html  constant.DEFAULT_PLAYER.html  fn.file_as_string.html  index.html  sidebar-items.js  struct.CmdOption.html
gomoku/display/: index.html  sidebar-items.js  struct.Console.html
gomoku/display/console/: constant.CASE_WIDTH.html  constant.ORANGE.html  enum.Player.html  index.html  sidebar-items.js  struct.Console.html
gomoku/display/draw/: constant.BLACK.html  (+12 more)
gomoku/ia/: constant.INFINITE.html  constant.NINFINITE.html  fn.heuristic.html  fn.neg_infinite.html  index.html  sidebar-items.js  struct.Decision.html
src/: bench.rs  cli.yml  cmd_option.rs  main.rs  one_test.rs
src/ai/: decision.rs  heuristic.rs  test_decision.rs
src/board/: fn_str.rs  go_board.rs  mod.rs  parse.rs  team.rs  test_capture.rs  test_free_threes.rs  test_win.rs  tile.rs
src/display/: console.rs  draw.rs  event.rs  go_event.rs  mod.rs  mouse.rs  play.rs
src/gomoku/: cmd_option.rs.html  main.rs.html
src/ia/: decision.rs  heuristic.rs  mod.rs  move_to_evaluate.rs  test_decision.rs  test_move_to_evaluate.rs  turn.rs
(+44 files in other folders)
