[package]
name = "gomoku"
version = "0.1.0"
authors = [
  "Guillaume Bersac <bersac_1@hotmail.fr>",
  "adjivas <adjivas@users.noreply.github.com>"
]
description = "Game of Gomoku from 42 school"
repository = "https://github.com/gbersac/gomoku_42.git"
build = "build.rs"

[dependencies.piston]
version = "0.13.0"

[dependencies.piston2d-opengl_graphics]
version = "0.14.0"

[dependencies.piston2d-graphics]
version = "0.10.0"

[dependencies.pistoncore-sdl2_window]
version = "0.16.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.12.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.15.0"
optional = true

[features]
default = ["include_sdl2"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]

[dependencies.clap]
version = "2"
features = ["yaml"]

[dependencies]
chrono = "0.2.16"
